garde/tests/ui/compile-fail/pattern_mismatched_types.stderr
error[E0277]: the trait bound `&str: Matcher` is not satisfied
 --> tests/ui/compile-fail/pattern_mismatched_types.rs
  |
  | #[derive(garde::Validate)]
  |          --------------- required by a bound introduced by this call
  | struct Test<'a> {
  |     #[garde(pattern(STR))]
  |                     ^^^ the trait `Matcher` is not implemented for `&str`
  |
  = help: the following other types implement trait `Matcher`:
            once_cell::sync::Lazy<T>
            Regex
note: required by a bound in `garde::rules::pattern::apply`
 --> src/rules/pattern.rs
  |
  | pub fn apply<T: Pattern, M: Matcher>(v: &T, (pat,): (&M,)) -> Result<(), Error> {
  |                             ^^^^^^^ required by this bound in `apply`
